--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,6 +9,9 @@ provisioner:
 platforms:
   - name: ubuntu-12.04
   - name: ubuntu-16.04
+    driver:
+      privileged: true
+      run_command: init
   - name: centos-6.7
   - name: fedora-23
 
