Disable fedora platform due to filesystem ACL issue
Default `www` pool configuration, installed with php-fpm package on Fedora 24,
requires ACL enabled filesystem, but ACL not supported in docker
(or at least in this particular image).

See issue #97 for more details.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,7 +13,10 @@ platforms:
       privileged: true
       run_command: init
   - name: centos-6.7
-  - name: fedora-23
+  # - name: fedora-24
+  #   driver:
+  #     privileged: true
+  #     run_command: init
 
 suites:
   - name: default
