--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,6 +20,7 @@ platforms:
   - name: opensuse-leap-42.2
   - name: ubuntu-14.04
   - name: ubuntu-16.04
+  - name: ubuntu-18.04
 
 suites:
   - name: default
