--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ env:
   - INSTANCE=default-ubuntu-1404 CHEF_VERSION=12.14.89
   - INSTANCE=default-ubuntu-1604
   - INSTANCE=default-ubuntu-1604 CHEF_VERSION=12.14.89
+  - INSTANCE=default-ubuntu-1804
+  - INSTANCE=default-ubuntu-1804 CHEF_VERSION=12.14.89
   - INSTANCE=default-debian-7
   - INSTANCE=default-debian-7 CHEF_VERSION=12.14.89
   - INSTANCE=default-debian-8
